# koikoi

./: TODO.md  convert.py  index.html  package.json  tailwind.config.ts  vite.config.ts
src/: App.civet  actions.civet  ai.civet  index.civet  index.css  model.civet  util.civet
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: game.rs  game_tensor.rs  lib.rs  main.rs  model.rs
src-tauri/tensors/: test.npy
src/components/: Board.civet  Credits.civet  Emph.civet  Info.civet  NewGame.civet  RoundOver.civet  Rules.civet
